[workspace]
members = [
    "opentelemetry",
    "opentelemetry-contrib",
    "opentelemetry-http",
    "opentelemetry-jaeger",
    "opentelemetry-otlp",
    "opentelemetry-prometheus",
    "opentelemetry-semantic-conventions",
    "opentelemetry-zipkin",
    "examples/actix-http",
    "examples/actix-http-tracing",
    "examples/actix-udp",
    "examples/async",
    "examples/aws-xray",
    "examples/basic",
    "examples/basic-otlp",
    "examples/datadog",
    "examples/grpc",
    "examples/http",
    "examples/tracing-grpc",
    "examples/zipkin",
]

[patch.crates-io]
tracing = { git = "https://github.com/tokio-rs/tracing.git", rev = "07b81bb5c125de125f01cc9b91a0bfe2273a643a" }
tracing-futures = { git = "https://github.com/tokio-rs/tracing.git", rev = "07b81bb5c125de125f01cc9b91a0bfe2273a643a" }
tracing-log = { git = "https://github.com/tokio-rs/tracing.git", rev = "07b81bb5c125de125f01cc9b91a0bfe2273a643a" }
tracing-opentelemetry = { git = "https://github.com/tokio-rs/tracing.git", rev = "07b81bb5c125de125f01cc9b91a0bfe2273a643a" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", rev = "07b81bb5c125de125f01cc9b91a0bfe2273a643a" }
