[package]
name = "opentelemetry-zipkin"
version = "0.10.0"
authors = ["OpenTelemetry Authors <cncf-opentelemetry-contributors@lists.cncf.io>"]
description = "Zipkin exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reqwest-blocking-client"]
reqwest-blocking-client = ["reqwest/blocking", "opentelemetry-http/reqwest"]
reqwest-client = ["reqwest", "opentelemetry-http/reqwest"]
surf-client = ["surf", "opentelemetry-http/surf"]

[dependencies]
async-trait = "0.1"
opentelemetry = { path = "../opentelemetry", version = "0.12", features = ["trace"] }
opentelemetry-http = { path = "../opentelemetry-http", version = "0.1", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
typed-builder = "0.8"
lazy_static = "1.4"
http = "0.2"
reqwest = { version = "0.11", optional = true }
surf = { version = "2.1", optional = true }
thiserror = "1"

[dev-dependencies]
isahc = "1"
opentelemetry = { path = "../opentelemetry", version = "0.12.0", default-features = false, features = ["trace", "testing"] }
