[package]
name = "actix-http-tracing"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
actix-web = "3.3.2"
actix-web-opentelemetry = { version = "0.9.0", features = ["metrics"] }
opentelemetry = { path = "../../opentelemetry", version = "0.12", features = ["metrics", "tokio"] }
opentelemetry-jaeger = { path = "../../opentelemetry-jaeger", version = "0.11", features = ["tokio"] }
opentelemetry-prometheus = { path = "../../opentelemetry-prometheus", version = "0.5" }
tracing = "0.1"
tracing-opentelemetry = "0.10"
tracing-subscriber = "0.2"
