[package]
name = "async"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
thrift = "0.13"
tokio = { version = "1", features = ["full"] }
opentelemetry = { path = "../../opentelemetry", version = "0.12.0", features = ["tokio-support"]  }
opentelemetry-jaeger = { path = "../../opentelemetry-jaeger", version = "0.11.0", features = ["tokio"] }
