[package]
name = "basic-otlp"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3.12"
lazy_static = "1.4.0"
opentelemetry = { path = "../../opentelemetry", version = "0.12.0", features = ["tokio-support", "metrics", "serialize"] }
opentelemetry-otlp = { path = "../../opentelemetry-otlp", features = ["tonic", "metrics"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
