[package]
name = "basic"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
lazy_static = "1.4"
opentelemetry = { path = "../../opentelemetry", version = "0.12.0", features = ["serialize", "tokio-support", "metrics"] }
opentelemetry-jaeger = { path = "../../opentelemetry-jaeger", version = "0.11.0", features = ["tokio"] }
serde_json = "1"
thrift = "0.13"
tokio = { version = "1", features = ["full"] }
