[package]
name = "grpc"
version = "0.1.0"
edition = "2018"

[[bin]] # Bin to run the gRPC server
name = "grpc-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "grpc-client"
path = "src/client.rs"

[dependencies]
http = "0.2"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1", features = ["full"] }
opentelemetry = { path = "../../opentelemetry", version = "0.12" }
opentelemetry-jaeger = { path = "../../opentelemetry-jaeger", version = "0.11.0" }

[build-dependencies]
tonic-build = "0.4"
